# spingate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  batch.org  crosscompile.org  cvgate.h  cvmain.cpp  experiment.org  litmus_tests.org  main.cpp  ref.bib  spingate.cpp  spingate.h  spingate.org
lib/: CMakeLists.txt  batch.cpp  batch.h  cvgate.cpp  cvgate.h  experiment.cpp  experiment.h  sample.cpp  sample.h  spingate.cpp  spingate.h
main/: CMakeLists.txt  cvmain.cpp  main.cpp
tests/: CMakeLists.txt  batch.t.cpp  experiment.t.cpp  litmus_tests.cpp  litmus_tests.h  sample.t.cpp  spingate.t.cpp
